v5.2
- add new "Baserom Basics" documentation
- other README edits
- added statusbar toggle uberasm to library
- reconfigure Retry prompt tile address settings
- drop unneeded "Free Up 69" patch

v5.1
- fix small issue in the usertoolbar
- update Callisto to 0.2.9
- update to Lunar Magic 3.40
- fix incorrect tile in retry settings

v5.0
- new Callisto-based workflow Baserom
- entirely revamped uberasm objects system
- rewrote all documentation in html
- initialization script is now in Powershell
- updated ExGraphics and Map16
- leaner baserom overall
- tidied up block code
- major tool updates to UberASMTool 2.0 and AddMusicK 1.0.9