@@ -22,6 +22,7 @@ Individual Dragon Coin Save - JackTheSpades, lx5, worldpeace - https://smwc.me/s
 ObjecTool 0.5* - 0x400, imamelia - https://smwc.me/s/24217
 RAM Specific L/R Scroll Disable - Chdata - https://smwc.me/s/20355
 RAM Toggled Status Bar (& IRQ) - Kevin - https://smwc.me/s/28449
+RAM-Toggled Spin Jump Fireballs - AmperSam - https://smwc.me/s/35220
 
 -- Bug Fix Patches --
 $13FB Game Crash Fix (Fireberry) - p4plus2 - https://smwc.me/s/18319
