@@ -12,7 +12,7 @@
 <a href="./index.html" class="home">🏠</a>
 <h3 id="resource-credits">Resource Credits</h3>
 <p>It is good practice to keep track of all resources used in your hacks, if you can help it, too give credit to their authors when working on a project, that way you can include them in a credits file when you go to release your hack.</p>
-<p>See the included <a href="../../CREDITS.txt">Credits file</a> in this baserom as an example. This also provided so you can see all resources included.</p>
+<p>See the included "CREDITS.txt" file in this baserom as an example. This also provided so you can see all resources included.</p>
 <p class="infobox">This project has no license nor do the maintainers claim any rights to the resources included in this project, those remain the rights of their respective authors.</p>
 </section>
 </body>
