@@ -96,7 +96,7 @@
 <li>always turning block animation was lightly edited.</li>
 <li>the castle conveyor/stairs have been fixed to use the the castle's brick pattern.</li>
 </ul>
-<small>*See the <a href="../../resources/patches/sprite_remaps.asm">resources/patches/sprite_remaps.asm</a> file for detailed remapping information.</small>
+<small>*See the <b>resources/patches/sprite_remaps.asm</b> file for detailed remapping information.</small>
 <hr>
 <!-- Section -->
 <h3 id="remapped-graphics">Remapped Graphics</h3>
