@@ -132,7 +132,7 @@
 </table>
 <!-- Section -->
 <h3 id="tweaks">Tweaks</h3>
-<p>Many minor fixes or edits have been made to the base game via hex edits. (See <a href="../../resources/patches/tweaks.asm">this file</a> for details).</p>
+<p>Many minor fixes or edits have been made to the base game via hex edits. (Open the <b>resources/patches/tweaks.asm</a> file for details).</p>
 <!-- Section -->
 <h4 id="gameplay-changes">Gameplay Changes</h4>
 <p>Some minor changes have been made to the game to optimize it for building Kaizo levels:</p>
