@@ -1,9 +1,12 @@
 v5.2
 - add new "Baserom Basics" documentation
 - other README edits
+- README now has an online component.
 - added statusbar toggle uberasm to library
+- added RAM-toggled spin jump fireballs patch
 - reconfigure Retry prompt tile address settings
 - drop unneeded "Free Up 69" patch
+- fixed P-Switch spawning from custom question blocks
 
 v5.1
 - fix small issue in the usertoolbar
